2003-08-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/key-performer.cc (create_audio_elements): Check for minor
	key.  Only if key is minor, set MIDI key to minor.

2003-08-06  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* mf/feta-eindelijk.mf (tracingvariables): add TODO.

	* lily/system-start-delimiter.cc (after_line_breaking): retrieve
	vertical extents to deal with Hara kiri correctly.

	* input/regression/hara-kiri-short.ly: remove

	* input/regression/hara-kiri-pianostaff.ly: update test.

	* Documentation/user/*.tely: remove WEBTITLE

	* scm/output-tex.scm (comment): idem.

	* scm/output-pdftex.scm: remove GUILE 1.4 glue

	* scm/music-functions.scm (make-lyric-event): new function

	* scm/lily.scm (lilypond-version): new function

	* input/test/version-output.ly: new file.

	* Documentation/user/lilypond.tely: add version number to
	front-page.

2003-08-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/test/midi-scales.ly: Reformat to match midi2ly output again.

2003-08-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/template/gregorian-transcription.ly (barTwo): syntax update.

	* Documentation/user/refman.itely (Hiding staffs): rename node.

2003-08-04  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/regression/new-markup-syntax.ly (texidoc): remove
	molecule-callback override.

2003-08-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/les-nereides.ly: Mark tweaks with %tweak.

	* Debian patch, see debian/changelog (Anthony Fok).

2003-08-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* buildscripts/lilypond-profile.sh: Add workaround for zsh posix
	problem.

2003-08-04  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* Documentation/user/refman.itely (Text markup): Fix language bug.

2003-08-04  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/* : postfix syntax fixes.

	* Documentation/user/refman.itely (Text markup): add note about
	raise/lower with ^ or _ .
	
	* po/fi.po: fix \\apply strings.

	* lily/parser.yy (open_event): warn for prefix articulations.
