@@ -2,10 +2,7 @@ depth = ..
 
 SUBDIRS=test regression tutorial no-notation ascii-art template mutopia 
 
-# nereides is tweaked a lot, can't do (read webpage)
-
-examples= 
-#examples+=size11 size13 size16 size20 size23 size26
+examples= les-nereides
 
 LOCALSTEPMAKE_TEMPLATES=ly mutopia
 EXTRA_DIST_FILES=paddy.abc
