@@ -154,7 +154,7 @@ usage ()
   /* No version number or newline here. It confuses help2man.  */
   printf (_f ("Usage: %s [OPTIONS]... FILE...", "lilypond").to_str0 ());
   printf ("\n\n");
-  printf (_ ("Typeset music and or play MIDI from FILE.").to_str0 ());
+  printf (_ ("Typeset music and/or produce MIDI from FILE.").to_str0 ());
   printf ("\n\n");
   printf(_ (
 "LilyPond is a music typesetter.  It produces beautiful sheet music\n"
